# AMS312

./: README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  UTD_fonctions.cpp  UTD_fonctions.h  U_V0_Gamma.vtu  U_V1_Omega.vtu  U_full_BEM_V0_Gamma.vtu  U_full_BEM_V1_Omega.vtu  Ud_Omega.vtu  Uext_BEM_BEM_Omega.vtu  Uext_full_BEM_Omega.vtu  Uext_t_BEM_BEM_Omega.vtu  Uext_t_full_BEM_Omega.vtu  Uinc_Gamma.vtu  Uinc_Omega.vtu  Ut_Omega.vtu  build_run.sh  cmake_install.cmake  compile_commands.json  dincs_Gamma1.vtu  grad_U_1_Gamma1.vtu  log11.txt  log2.txt  log4.txt  log5.txt  log6.txt  log8.txt  log_gmsh.txt  main.cpp  print.txt  print1.txt  print10.txt  print3.txt  print7.txt  print9.txt  xlifepp.sh  xlifepp_script.geo  xlifepp_script.msh
